fixed  hamburger alignment

--- a/styles/Nav.css
+++ b/styles/Nav.css
@@ -49,7 +49,6 @@
     height: 80px;
     width: 80px;
     position: absolute;
-    padding: 20px;
   }
 
 .close {
@@ -91,7 +90,6 @@
     transform: rotate(135deg);
     animation: rotate 0.5s 1;
     position: absolute;
-    /* top: 55px; */
   }
   
   .close .line:nth-child(2) {
@@ -103,7 +101,6 @@
     transform: rotate(45deg);
     animation: rotate 0.5s 1;
     position: absolute;
-    /* top: 55px; */
   }
   
   @keyframes rotate {
